  deprecated, they are unused.
* Passing a WikiPage to PageEditStash::parseAndCache() has been deprecated.
  Use PageUpdater instance.
* SpecialBlock::getSuggestedDurations() has been deprecated, use
  Language::getBlockDurations() instead.
* MediaWikiServices::getBlockErrorFormatter() has been deprecated, use
  MediaWikiServices::getFormatterFactory()->getBlockErrorFormatter() instead.
* Database::listViews() has been deprecated. This was previously used to filter
  views out of the return value of Database::listTables(). Now listTables()
  will not include views. MediaWiki does not use views.
* (T207621) UserMailer::rfc822Phrase() has been hard deprecated.
* TempUserConfig::getMatchPattern has been deprecated, use
  TempUserConfig::getMatchPatterns instead.
* (T230025) Title::purgeSquid(), deprecated in 1.35, now emits warnings.
* Title::getCdnUrls(), deprecated in 1.35, now emits warnings.
* The rarely-used convenience method Xml::wrapClass() is now deprecated. Instead
  you can use Xml::tags('span', ['class'=>'foo'], 'bar').
* $wgUseSameSiteLegacyCookies has been deprecated and will be ignored.
* WebRequest::getCrossSiteCookie() has been deprecated. It will emit deprecation
  warnings. Use WebRequest::getCookie().
* Using the array_merge_recursive merge strategy in extension.json and skin.json
  has been hard deprecated
* …

=== Other changes in 1.42 ===
* Gallery: Image captions are no longer wrapped in <p> tags. Skins that
  customize rendering for galleries may need to tweak their CSS.
* Scripts under maintenance/dev/, for quickly setup a local MediaWiki for
  development purposes, have been removed, see DEVELOPERS.md for alternatives.
* …

== Compatibility ==

MediaWiki 1.42 requires PHP 7.4.3 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.
