@@ -22,7 +22,7 @@ interface ImageBeforeProduceHTMLHook {
 	 *
 	 * @since 1.35
 	 *
-	 * @param DummyLinker $linker Formerly a Skin/Linker, now a DummyLinker for b/c
+	 * @param DummyLinker $linker Deprecated, do not use.
 	 * @param Title &$title Title object of the image
 	 * @param File|false &$file File object, or false if it doesn't exist
 	 * @param array &$frameParams Various parameters with special meanings; see documentation in
